<resources>
    <string name="app_name">Claves</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_sync">Data</string>

    <string name="pref_title_display_name">Celular</string>
    <string name="pref_default_display_name">5544332211</string>

    <string name="pref_title_Connect">Enviar Datos</string>
    <string-array name="pref_list_Connect_titles">
        <item>Si</item>
        <item>No</item>
    </string-array>
    <string-array name="pref_list_Connect_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_title_display_url">Url</string>
    <string name="pref_title_default_url">http://www.tkinova.com/fidegarsms/sms/save</string>

</resources>
